--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "^4.0",
+        "hkonnet/laravel-ebay": "^1.2",
         "intervention/image": "^2.4",
         "jgrossi/corcel": "^2.6",
         "laravel/framework": "5.6.*",
