--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,12 @@
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.1",
         "fideloper/proxy": "^4.0",
+        "hkonnet/laravel-ebay": "^1.2",
         "intervention/image": "^2.4",
         "jgrossi/corcel": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6"
+        "laravelcollective/html": ">=5.2.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
