--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "jgrossi/corcel": "^2.6",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.6"
+        "laravelcollective/html": "^5.6",
+        "sonnenglas/laravel5-amazon-mws": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
