--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-debugbar": "^3.1",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "^4.0",
         "hkonnet/laravel-ebay": "^1.2",
         "intervention/image": "^2.4",
